--- a/src/component/Calculator.css
+++ b/src/component/Calculator.css
@@ -7,11 +7,12 @@
   height: auto;
   display: flex;
   justify-content: center;
-  padding-top: 40px;
+  padding-top: 35px;
+  
 }
 
 .input-box {
-  width: 170px;
+  width: 180px;
 }
 
 .clear-btn {
@@ -22,4 +23,8 @@
 
 .onclick-btns {
   margin: 10px;
+}
+
+ #clearbtn {
+  margin-left: 11px;
 }
